fixed overflow issue

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -8,7 +8,11 @@
 /*home*/
 html {
     background-color: black;
+    z-index: 0;
+}
 
+.home-div {
+    z-index: 0;
 }
 
 .appbody {
