--- a/src/style/homemoviecard.css
+++ b/src/style/homemoviecard.css
@@ -1,7 +1,7 @@
 .movie-slide {
     padding-bottom: 2rem;
     margin-top: 1rem;
-    height: 360px;
+    height: 250px;
     position: relative;
 }
 
@@ -37,8 +37,8 @@
 }
 
 .custom-carousel {
-    overflow: visible !important;
-    position: relative !important;
+    overflow-x: hidden;
+    position: relative;
 }
 
 .custom-carousel .react-multiple-carousel__arrow {
@@ -65,19 +65,45 @@
     right: 0;
 }
 
-.moviecard:hover {
-    transform: translateY(-80px) scale(1.1) !important;
-    height: 360px;
-    z-index: 5 !important;
-    background-size: cover;
-    background-position: center center;
-    transform-origin: center bottom;
-    margin-right: 13px;
-    box-shadow: 0px 4px 10px 10px #a71d13;
-    border-radius: 5px;
+@media (min-width:500px) {
+    .moviecard:hover {
+        transform: translateY(-78px) scale(1.1) !important;
+        height: 360px;
+        max-height: max-content;
+        z-index: 10 !important;
+        background-size: cover;
+        background-position: center center;
+        transform-origin: center bottom;
+        margin-right: 13px;
+        box-shadow: 0px 4px 10px 10px #a71d13;
+        border-radius: 5px;
+        overflow: visible !important;
+    }
+
+}
+
+@media (max-width:500px) {
+    .moviecard:hover {
+        height: 220px;
+        z-index: 10 !important;
+        transform: scale(1.1) !important;
+        box-shadow: 0px 4px 10px 10px #a71d13;
+        border-radius: 5px;
+        overflow: visible;
+    }
 }
 
 .moviecard:hover .overlay {
     opacity: 1;
 
+}
+
+.custom-carousel:hover .moviecard {
+    overflow: visible;
+}
+
+.custom-carousel:hover {
+    overflow: visible;
+    position: relative;
+    z-index: 1;
 }
